--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
-html, body {
-  width: 100%;
+html,
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   background-color: #454545;
-  font-family: 'Fira Code', monospace;
+  font-family: "Fira Code", monospace;
 }
 
 #container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50vw;
-  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -24,43 +38,34 @@ html, body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 auto;
+  margin: 0;
+  margin-top: -10vh;
 }
 
 #search-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 60%;
-  border: 2px solid white;
-  margin: 10px;
+  width: 100%;
   border-radius: 5px;
 }
 
 #link-container {
-  width: 60%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding: 10px;
-  margin: 10px;
+  -ms-flex-preferred-size: 1;
+      flex-basis: 1;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 form {
-  display: inline;
-  width: 100%;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+  margin: 1% 1%;
 }
 
 input {
@@ -68,17 +73,33 @@ input {
   width: 100%;
   border: none;
   background: none;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: white;
-  padding: 5px;
+  padding: 10px;
 }
 
 input:focus {
   outline: none;
 }
 
-.text {
-  text-align: center;
+input::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.2);
+  font-size: 0.9em;
+}
+
+input:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.2);
+  font-size: 0.9em;
+}
+
+input::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.2);
+  font-size: 0.9em;
+}
+
+input::placeholder {
+  color: rgba(255, 255, 255, 0.2);
+  font-size: 0.9em;
 }
 
 .links {
@@ -92,19 +113,29 @@ input:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.1);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: solid 1px white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 5px;
-  padding: 10px;
   height: 90%;
+  margin: 1% 1%;
+  padding: 10px;
 }
 
 .links ul {
   list-style: none;
-  padding-left: 5px;
   color: white;
+}
+
+.title {
+  padding-bottom: 10px;
+  color: #a8dac1;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 a {
@@ -114,5 +145,31 @@ a {
 
 a:hover {
   color: #a8dac1;
+  -webkit-animation-duration: 0.01s;
+          animation-duration: 0.01s;
+  -webkit-animation-name: textflicker;
+          animation-name: textflicker;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+}
+
+@-webkit-keyframes textflicker {
+  from {
+    text-shadow: 1px 0 0 #a98fbe, -2px 0 0 #a8dac1;
+  }
+  to {
+    text-shadow: 2px 0.5px 2px #a98fbe, -1px -0.5px 2px #a8dac1;
+  }
+}
+
+@keyframes textflicker {
+  from {
+    text-shadow: 1px 0 0 #a98fbe, -2px 0 0 #a8dac1;
+  }
+  to {
+    text-shadow: 2px 0.5px 2px #a98fbe, -1px -0.5px 2px #a8dac1;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
