--- a/styles.scss
+++ b/styles.scss
@@ -1,89 +1,111 @@
 $bg-color: rgb(69, 69, 69);
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
 
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: $bg-color;
-    font-family: 'Fira Code', monospace;    
+html,
+body {
+	// box-sizing: border-box;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	background-color: $bg-color;
+	font-family: "Fira Code", monospace;
 }
 
 #container {
-    display: flex;
-    width: 50vw;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	margin: 0;
+	margin-top: -10vh;
 }
 
 #search-box {
-    display: flex;
-    align-items: center;
-    width: 60%;
-    border: 2px solid white;
-    margin: 10px;
-    border-radius: 5px;
+	width: 100%;
+	border-radius: 5px;
 }
 
 #link-container {
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 10px;
-    margin: 10px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-basis: 1;
+	justify-content: space-around;
 }
 
 form {
-    display:inline;
-    width: 100%;
+	border-radius: 5px;
+	background-color: rgba(0, 0, 0, 0.1);
+	margin: 1% 1%;
 }
 
 input {
-    display:inline;
-    width: 100%;
-    border: none;
-    background: none;
-    font-size:1.1rem;
-    color: white;
-    padding: 5px;
+	display: inline;
+	width: 100%;
+	border: none;
+	background: none;
+	font-size: 1rem;
+	color: white;
+	padding: 10px;
 }
 
 input:focus {
-    outline: none;
+	outline: none;
 }
 
-.text {
-    text-align: center;
+input::placeholder {
+	color: rgba(255, 255, 255, 0.2);
+	font-size: 0.9em;
 }
 
 .links {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    border: solid 1px white;
-    border-radius: 5px;;
-    // padding: 10px;
-    padding: 10px;
-    height: 90%;
-    ul {
-        list-style: none;
-        padding-left: 5px;
-        color: white;
-    }
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	background-color: rgba(0, 0, 0, 0.1);
+	justify-content: center;
+	align-items: center;
+	border-radius: 5px;
+	height: 90%;
+	margin: 1% 1%;
+	padding: 10px;
+	ul {
+		list-style: none;
+		color: white;
+	}
+}
+
+.title {
+	padding-bottom: 10px;
+	color: rgb(168, 218, 193);
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 a {
-    text-decoration: none;
-    color: white;
+	text-decoration: none;
+	color: white;
 }
 
 a:hover {
-    color: rgb(168, 218, 193)
+	color: #a8dac1;
+	animation-duration: 0.01s;
+	animation-name: textflicker;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+
+@keyframes textflicker {
+	from {
+		text-shadow: 1px 0 0 #a98fbe, -2px 0 0 #a8dac1;
+	}
+	to {
+		text-shadow: 2px 0.5px 2px #a98fbe, -1px -0.5px 2px #a8dac1;
+	}
 }
