--- a/output.css
+++ b/output.css
@@ -555,6 +555,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline-style: solid;
 }
 
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 body {
   width: 100vw;
   height: 100vh;
@@ -578,12 +582,12 @@ body {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  border: 1px solid #5b7b65;
+  border: 2px solid #86acb9;
 }
 
 #img {
-  height:300px;
-  width: 300px;
+  height:250px;
+  width: 250px;
   -o-object-fit: cover;
      object-fit: cover;
   margin-right: 20px;
@@ -618,7 +622,8 @@ body {
 }
 
 #search-box {
-  border-bottom: 1px solid #5b7b65 !important;
+  border-bottom: 2px solid #86acb9 !important;
+  margin-bottom: 20px;
 }
 
 #search:focus {
@@ -627,14 +632,15 @@ body {
 
 .title {
   font-weight: 500;
+  color: #8ec7da
 }
 
 a:hover {
-  color: #5b7b65;
+  color: #86acb9;
 }
 
-#currentTime {
-  font-size: 18px;
+#timeline {
+  font-size: 16px;
   font-weight: 400;
   color: white
 }
