--- a/input.css
+++ b/input.css
@@ -16,7 +16,7 @@ body {
     height: 100vh;
     display:flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 #container {
@@ -24,6 +24,7 @@ body {
     justify-content: center;
     width: fit-content;
     border: 2px solid #86acb9;
+    margin-top: 25%;
 }
 
 #img {
@@ -51,6 +52,7 @@ body {
 
 .links {
     width: 100px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     color: white;
@@ -87,4 +89,25 @@ a:hover {
     font-size: 16px;
     font-weight: 400;
     color: white
+}
+
+.quote {
+    margin-top: 20px;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    gap: 8px;
+}
+
+#quote-body {
+    text-align: center;
+    font-style: italic;
+}
+
+#author {
+    justify-content: flex-end;
+    font-weight: 500;
+    padding-left: 100px;
 }
