--- a/output.css
+++ b/output.css
@@ -502,61 +502,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.visible {
-  visibility: visible;
-}
-
-.block {
-  display: block;
-}
-
 .flex {
   display: flex;
-}
-
-.table {
-  display: table;
-}
-
-.contents {
-  display: contents;
-}
-
-.hidden {
-  display: none;
-}
-
-.border-collapse {
-  border-collapse: collapse;
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.resize {
-  resize: both;
 }
 
 .flex-col {
   flex-direction: column;
 }
 
-.border {
-  border-width: 1px;
-}
-
-.underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-
-.outline {
-  outline-style: solid;
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 body {
@@ -573,7 +529,7 @@ body {
   height: 100vh;
   display:flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 #container {
@@ -583,6 +539,7 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   border: 2px solid #86acb9;
+  margin-top: 25%;
 }
 
 #img {
@@ -609,6 +566,7 @@ body {
 
 .links {
   width: 100px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   color: white;
@@ -643,4 +601,25 @@ a:hover {
   font-size: 16px;
   font-weight: 400;
   color: white
+}
+
+.quote {
+  margin-top: 20px;
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  gap: 8px;
+}
+
+#quote-body {
+  text-align: center;
+  font-style: italic;
+}
+
+#author {
+  justify-content: flex-end;
+  font-weight: 500;
+  padding-left: 100px;
 }
