--- a/input.css
+++ b/input.css
@@ -16,7 +16,7 @@ body {
     height: 100vh;
     display:flex;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
 }
 
 #container {
@@ -24,7 +24,6 @@ body {
     justify-content: center;
     width: fit-content;
     border: 2px solid #86acb9;
-    margin-top: 25%;
 }
 
 #img {
@@ -92,12 +91,13 @@ a:hover {
 }
 
 .quote {
+    height: 100px;
     margin-top: 20px;
     font-size: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60%;
+    width: 40%;
     gap: 8px;
 }
 
@@ -109,5 +109,4 @@ a:hover {
 #author {
     justify-content: flex-end;
     font-weight: 500;
-    padding-left: 100px;
 }
