--- a/output.css
+++ b/output.css
@@ -529,7 +529,7 @@ body {
   height: 100vh;
   display:flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
 }
 
 #container {
@@ -539,7 +539,6 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   border: 2px solid #86acb9;
-  margin-top: 25%;
 }
 
 #img {
@@ -604,12 +603,13 @@ a:hover {
 }
 
 .quote {
+  height: 100px;
   margin-top: 20px;
   font-size: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
+  width: 40%;
   gap: 8px;
 }
 
@@ -621,5 +621,4 @@ a:hover {
 #author {
   justify-content: flex-end;
   font-weight: 500;
-  padding-left: 100px;
 }
